# caching-course-project

./: .gitignore  INSTRUCTIONS.md  README.md
.github/workflows/: build-latex.yml
docs/: PROJECT_OVERVIEW.md  PROJECT_OVERVIEW.pptx  PROJECT_OVERVIEW.tex  build_overview_deck.py
task1-presentation/: SCALM_Presentation.pptx  StreamingLLM_Presentation.pptx  build_scalm_deck.py  build_streaming_llm_deck.py
task1-presentation/code/: README.md  streaming_llm_demo.py  test_sink_kv_cache.py
task1-presentation/notes/: speaker-notes.md
task1-presentation/papers/: sglang-critical-analysis.md  sglang-deep-read.md
task1-presentation/papers/streaming-llm/: critical-analysis.md  deep-read.md  streaming-llm.txt
task2-final-project/: GPTCACHE_PR.md
task2-final-project/code/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
task2-final-project/code/.github/workflows/: ci.yml
task2-final-project/code/benchmarks/: README.md  metrics.py  policies.py  run_all.py  runner.py  workloads.py
task2-final-project/code/docs/: README.md  library-justification.md  report-draft.md
task2-final-project/code/docs/.archive/: report-draft-2026-07-21.md
task2-final-project/code/results/: benchmark_config.json  benchmark_results_20260719_183822.csv  benchmark_results_20260721_191113.csv  benchmark_results_20260721_191113.json  stats_20260721_191113.json
task2-final-project/code/results/ablation/: ablation_results.csv  ablation_results_raw.csv
task2-final-project/code/results/archive/: benchmark_results_20260719_183822.json
task2-final-project/code/scripts/: build_report_pdf.py  compute_statistics.py  generate_plots.py  run_ablation.py  run_all.sh
task2-final-project/code/src/cost_aware_eviction/: __init__.py  config.py  cost_estimator.py  eviction_manager.py  gptcache_plugin.py  priority_queue.py
task2-final-project/code/tests/: conftest.py  test_config.py  test_cost_estimator.py  test_eviction_manager.py  test_gptcache_plugin.py  test_integration.py  test_priority_queue.py  test_properties.py
task2-final-project/notes/: benchmark-design.md  evaluation-plan.md
task2-final-project/report-latex/: README.md  references.bib  report.tex
