[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdsf-gptcache"
version = "1.0.0"
description = "Cost-Aware GDSF Eviction Policy Enhancement for GPTCache"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nissim Brami", email = "nissimbrami@post.bgu.ac.il"},
]
keywords = ["caching", "LLM", "GDSF", "GPTCache", "eviction-policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gptcache==0.1.43",
    "sentence-transformers==2.7.0",
    "tiktoken==0.7.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scipy==1.12.0",
    "matplotlib==3.8.3",
    "seaborn==0.13.2",
    "tqdm==4.66.2",
    "faiss-cpu==1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-benchmark==4.0.0",
    "pytest-cov==5.0.0",
    "hypothesis==6.99.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Repository = "https://github.com/nissimbrami/cost-aware-eviction-gptcache"
Issues = "https://github.com/nissimbrami/cost-aware-eviction-gptcache/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Pytest Configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
    "integration: marks integration tests",
]

# ─── Coverage Configuration ─────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "scripts/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.coverage.html]
directory = "htmlcov"

# ─── Ruff Linter Configuration ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ─── MyPy Configuration ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]
